# Number_registration_log

./: .env  Dockerfile  README.md  WIZARD_README.md  alembic.ini  architecture.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  init_dbs.sql  manual.md  pyproject.toml  pytest.ini
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init.py  0002_add_equipment_uniqueness.py  13c426e84b5f_replace_unique_constraint_with_index_.py  156932104802_ensure_unique_factory_no_idempotent.py  55344096801e_make_document_note_nullable.py
app/: main.py
app/core/: auth.py  config.py  db.py
app/middleware/: log_requests.py
app/models/: audit.py  base.py  counter.py  doc_number.py  document.py  equipment.py  session.py  user.py
app/repositories/: audit.py  counter.py  doc_numbers.py  documents.py  equipment.py  reports.py  sessions.py  users.py
app/routers/: admin.py  admin_dashboard.py  documents.py  equipment.py  importer.py  reports.py  sessions.py  suggest.py  ui.py  users.py  wizard.py
app/schemas/: admin.py  common.py  documents.py  equipment.py  reports.py  (+3 more)
data/: Копия Актуальный список пользователей СКБт.xls  Копия Номера до 20к.xlsx  Копия Паровые Турбины.xlsx
frontend/: .dockerignore  .env.production  Dockerfile  nginx.conf  package-lock.json  package.json
scripts/: analyze_api_usage.py  check_data.py  find_unused_routes.py  migrate_data.py
tests/: conftest.py  test_api.py  test_golden.py  test_report_excel.py  test_reservation_concurrency.py  test_ttl_release.py  test_uniqueness.py  test_wizard_basic.py
(+47 files in other folders)
