[tool.poetry]
name = "reg-journal"
version = "0.1.0"
description = "Журнал регистрации документов с автоматической нумерацией (FastAPI, SQLAlchemy, PostgreSQL)"
authors = ["Your Name you@example.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
SQLAlchemy = { version = "^2.0.31", extras = ["asyncio"] }
asyncpg = "^0.30.0"
alembic = "^1.13.2"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.3"
Jinja2 = "^3.1.4"
python-multipart = "^0.0.9"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
openpyxl = "^3.1.3"
APScheduler = "^3.10.4"
httpx = "^0.27.0"
typer = "^0.12.3"
orjson = "^3.10.5"
pandas = "^2.3.3"
psycopg2-binary = "^2.9.11"
xlrd = "^2.0.2"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
ruff = "^0.5.0"
black = "^24.4.2"
isort = "^5.13.2"
testcontainers = { extras = ["postgres"], version = "^4.13.2" }
faker = "^38.0.0"
vulture = "^2.14"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"